# Diplomna_TU_Node

./: CMakeLists.txt  Node.tasks  README.md
.scannerwork/: report-task.txt
Components/BaseComponent/: BaseComponent.cpp  BaseComponent.hpp  CMakeLists.txt  ComponentSettings.cpp  ComponentSettings.hpp  Setting.cpp  Setting.hpp  ValueTypes.hpp
Components/EspnowDriver/: CMakeLists.txt  EspnowDriver.cpp  EspnowDriver.hpp  IDriver.hpp
Components/EspnowManager/: CMakeLists.txt  EspnowManager.c  EspnowManager.h  EspnowManager_Private.c  EspnowManager_Private.h  Espnow_Message_General.c  Espnow_Message_General.h
Components/EspnowManager/Debug_Txt/: Debug_Txt.c  Debug_Txt.h
Components/EspnowManager/Distance/: Distance.cpp  Distance.hpp
Components/EspnowManager/EspnowManager/: EspnowManager.hpp
Components/EspnowManager/EspnowManager/include/: EspnowManager_Communication.hpp  EspnowManager_Interface.hpp  EspnowManager_Tasks.hpp
Components/EspnowManager/EspnowManager/src/: EspnowManagerCommunication.cpp  EspnowManagerInterface.cpp  EspnowManagerTasks.cpp  EspnowManager_Communication.cpp  EspnowManager_Interface.cpp  EspnowManager_Tasks.cpp
Components/EspnowManager/EspnowManager/utils/: EspnowManager_Config_Validation.h  EspnowManager_Internal.hpp  EspnowManager_Task_Config.h
Components/EspnowManager/EspnowPeer/: EspnowPeer.cpp  EspnowPeer.hpp
Components/EspnowManager/Interfaces/: IMessageable.hpp
Components/EspnowManager/Messages/include/: EspnowMessageAcknowledge.hpp  EspnowMessageCalculation.hpp  EspnowMessageKeepAlive.hpp  EspnowMessageRequest.hpp  IEspnowMessage.hpp
Components/EspnowManager/Messages/src/: EspnowMessageAcknowledge.cpp  EspnowMessageCalculation.cpp  EspnowMessageKeepAlive.cpp  EspnowMessageRequest.cpp
Components/EspnowManager/Object/Distance/: Distance.cpp  Distance.hpp
Components/EspnowManager/Object/Encapsulation/: To_CPP_Encapsulation.cpp  To_CPP_Encapsulation.hpp  To_C_Encapsulation.c  To_C_Encapsulation.h
Components/EspnowManager/Object/Peer/: Peer.cpp  Peer.hpp
Components/EspnowManager/Object/RSSI Messages/: RSSI_Message_Interface.cpp  RSSI_Message_Interface.hpp
Components/EspnowManager/Object/RSSI Messages/RSSI Acknowledge/: RSSI_Message_Acknowledge.cpp  RSSI_Message_Acknowledge.hpp
Components/EspnowManager/Object/RSSI Messages/RSSI Calculation/: RSSI_Message_Calculation.cpp  RSSI_Message_Calculation.hpp
Components/EspnowManager/Object/RSSI Messages/RSSI Keep Alive/: RSSI_Message_Keep_Alive.cpp  RSSI_Message_Keep_Alive.hpp
Components/EspnowManager/Object/RSSI Messages/RSSI Request/: RSSI_Message_Request.cpp  RSSI_Message_Request.hpp
Components/EspnowManager/Object/Series/: ClosedSeries.hpp  OpenSeries.cpp  SeriesCommon.hpp
Components/EspnowManager/RSSI_Calculation/: RSSI_Calculation.c  RSSI_Calculation.h
Components/EspnowManager/Series/: ClosedSeries.hpp  OpenSeries.cpp  OpenSeries.hpp  SeriesCommon.hpp
Components/EspnowStack/: CMakeLists.txt
Components/EspnowStack/Debug_Txt/: Debug_Txt.h
Components/EspnowStack/EspnowDriver/: EspnowDriver.c  EspnowDriver.cpp  EspnowDriver.h  EspnowDriver.hpp
Components/EspnowStack/EspnowDriver_Upper/: EspnowDriver_Upper.c  EspnowDriver_Upper.h
Components/EspnowStack/EspnowManager/: EspnowManager.c  EspnowManager.h  EspnowManager_Config_Validation.h  EspnowManager_Task_Config.h
Components/EspnowStack/EspnowManager/include/: EspnowManager_Communication.hpp  EspnowManager_Interface.hpp
Components/EspnowStack/EspnowManager/src/: EspnowManager_Communication.cpp  EspnowManager_Interface.cpp  EspnowManager_Tasks.cpp
Components/EspnowStack/EspnowManager/utils/: EspnowManager_Internal.hpp  EspnowManager_Task_Config.h
Components/EspnowStack/EspnowMessageGeneral/: EspnowMessageGeneral.c  EspnowMessageGeneral.h  Payload.cpp
Components/EspnowStack/Espnow_Message_General/: Espnow_Message_General.c  Espnow_Message_General.h
Components/EspnowStack/Object/Distance/: Distance.cpp  Distance.hpp  Distance_ref.hpp
Components/EspnowStack/Object/Encapsulation/: To_CPP_Encapsulation.cpp  To_CPP_Encapsulation.hpp  To_C_Encapsulation.c  To_C_Encapsulation.h
Components/EspnowStack/Object/EspnowPeer/: EspnowPeer.cpp  EspnowPeer.hpp
Components/EspnowStack/Object/Peer/: Peer.cpp  Peer.hpp
Components/EspnowStack/Object/RSSI Messages/: EspnowMessageInteface.hpp  RSSI_Message_Interface.hpp
Components/EspnowStack/Object/RSSI Messages/RSSI Acknowledge/: RSSI_Message_Acknowledge.cpp  RSSI_Message_Acknowledge.hpp
Components/EspnowStack/Object/RSSI Messages/RSSI Calculation/: RSSI_Message_Calculation.cpp  RSSI_Message_Calculation.hpp
Components/EspnowStack/Object/RSSI Messages/RSSI Keep Alive/: RSSI_Message_Keep_Alive.cpp  RSSI_Message_Keep_Alive.hpp
Components/EspnowStack/Object/RSSI Messages/RSSI Request/: RSSI_Message_Request.cpp  RSSI_Message_Request.hpp
Components/EspnowStack/Object/Series/: ClosedSeries.cpp  ClosedSeries.hpp  OpenSeries.cpp  OpenSeries.hpp  SeriesCommon.hpp
Components/LogManager/: CMakeLists.txt
Components/LogManager/Interfaces/: ILogger.hpp  LoggerInterface.hpp
Components/LogManager/Interfaces/UARTLogger/: UARTLogger.cpp  UARTLogger.hpp
Components/LogManager/LogManager/: LogManager.cpp  LogManager.hpp  LogSeverity.hpp
Components/LogManager/Wrapper/: LogManager.cpp  LogManager.h
Components/Monitor/: CMakeLists.txt  CpuMonitor.cpp  CpuMonitor.hpp  IMonitorable.hpp  Monitor.cpp  Monitor.hpp  RamMonitor.cpp  RamMonitor.hpp
Components/NetworkComponents/: CMakeLists.txt
Components/NetworkComponents/MacAddress/: MacAddress.cpp  MacAddress.hpp
Components/NetworkComponents/NetIdentifier/: NetIdentifier.hpp
Components/NetworkComponents/NetSocket/: NetSocket.cpp  NetSocket.hpp
Components/TaskManager/: CMakeLists.txt  TaskConfig.cpp  TaskConfig.hpp  TaskManager.c  TaskManager.cpp  TaskManager.h  TaskManager.hpp  TaskManager_cfg.h  TaskManager_cfg.hpp  TaskNameTable.c  TaskNameTable.h
Diagrams/: EspmeshDriverStateMahcine.drawio  Mesh server - manager communication.drawio  (+4 more)
main/: CMakeLists.txt  Kconfig.projbuild  Node.c  Node.cpp  idf_component.yml
(+66 files in other folders)
