idf_component_register( SRCS
                        "EspnowManager/src/EspnowManagerTasks.cpp"
                        "EspnowManager/src/EspnowManagerInterface.cpp"
                        "EspnowManager/src/EspnowManagerCommunication.cpp"
                        "EspnowPeer/EspnowPeer.cpp"
                        "Series/OpenSeries.cpp"
                        "Series/ClosedSeries.cpp"
                        "Distance/Distance.cpp"
                        "Messages/src/EspnowMessageRequest.cpp"
                        "Messages/src/EspnowMessageAcknowledge.cpp"
                        "Messages/src/EspnowMessageCalculation.cpp"
                        "Messages/src/EspnowMessageKeepAlive.cpp"
                        INCLUDE_DIRS
                        "./EspnowManager"
                        "./Interfaces"
                        "./EspnowPeer"
                        "./Distance"
                        "./Series"
                        "./Messages/include"
                        PRIV_INCLUDE_DIRS
                        REQUIRES
                        "Common"
                        "TaskManager"
                        "Payload"
                        "EspnowDriver"
                       )