idf_component_register(SRCS 
                        "EspnowManager/EspnowManager.c"
                        "EspnowDriver_Upper/EspnowDriver_Upper.c"
                        "Debug_Txt/Debug_Txt.c"
                        "Object/Encapsulation/To_C_Encapsulation.c"
                        "Object/Encapsulation/To_CPP_Encapsulation.cpp"
                        "Object/Peer/Peer.cpp"
                        "Object/Series/OpenSeries.cpp"
                        "Object/Series/ClosedSeries.cpp"
                        "Object/Distance/Distance.cpp"
                        "Object/RSSI Messages/RSSI Request/RSSI_Message_Request.cpp"
                        "Object/RSSI Messages/RSSI Calculation/RSSI_Message_Calculation.cpp"
                        "Object/RSSI Messages/RSSI Keep Alive/RSSI_Message_Keep_Alive.cpp"
                        "Object/RSSI Messages/RSSI Acknowledge/RSSI_Message_Acknowledge.cpp"
                       INCLUDE_DIRS 
                        "./EspnowManager"
                        "./EspnowDriver_Upper"
                        "./Debug_Txt"
                        "./Object/Encapsulation"
                        "./Object/Peer"
                        "./Object/Series"
                        "./Object/Distance"
                        "./Object/RSSI Messages"
                        "./Object/RSSI Messages/RSSI Request"
                        "./Object/RSSI Messages/RSSI Calculation"
                        "./Object/RSSI Messages/RSSI Keep Alive"
                        "./Object/RSSI Messages/RSSI Acknowledge"
                       REQUIRES 
                        "Common"
                        "esp-now"
                        "TaskManager"
                       )