idf_component_register(SRCS
                        "EspnowMessageGeneral/EspnowMessageGeneral.c"
                        "EspnowManager/src/EspnowManager_Tasks.cpp"
                        "EspnowManager/src/EspnowManager_Interface.cpp"
                        "EspnowManager/src/EspnowManager_Communication.cpp"
                        "EspnowDriver/EspnowDriver.c"
                        "Object/Peer/Peer.cpp"
                        "Object/Series/OpenSeries.cpp"
                        "Object/Series/ClosedSeries.cpp"
                        "Object/Distance/Distance.cpp"
                        "Object/RSSI Messages/RSSI Request/RSSI_Message_Request.cpp"
                        "Object/RSSI Messages/RSSI Calculation/RSSI_Message_Calculation.cpp"
                        "Object/RSSI Messages/RSSI Keep Alive/RSSI_Message_Keep_Alive.cpp"
                        "Object/RSSI Messages/RSSI Acknowledge/RSSI_Message_Acknowledge.cpp"
                       INCLUDE_DIRS
                        "./EspnowMessageGeneral"
                        "./EspnowManager/include"
                        "./EspnowDriver"
                        "./Object/Peer"
                        "./Object/Series"
                        "./Object/Distance"
                        "./Object/RSSI Messages"
                        "./Object/RSSI Messages/RSSI Request"
                        "./Object/RSSI Messages/RSSI Calculation"
                        "./Object/RSSI Messages/RSSI Keep Alive"
                        "./Object/RSSI Messages/RSSI Acknowledge"
                        PRIV_INCLUDE_DIRS
                        "./EspnowManager/utils"
                       REQUIRES
                        "Common"
                        "TaskManager"
                        "esp_wifi"
                       )