idf_component_register(SRCS
                        "LogManager/LogManager.cpp"
                        "Interfaces/UARTLogger/UARTLogger.cpp"
                        INCLUDE_DIRS
                        "./LogManager"
                        "./Interfaces/"
                       PRIV_INCLUDE_DIRS
                       "./Interfaces/UARTLogger"
                       REQUIRES
                       Common
                       )