idf_component_register(SRCS
                            "TaskNameTable.c"
                            "TaskManager.cpp"
                       INCLUDE_DIRS
                            "."
                       REQUIRES
                            Common
                            esp_timer
                            EspnowManager
                            EspmeshManager
                            WifiManager
                            Monitor
                            Hooks
                            NvsManager
                       )