idf_component_register(SRCS
                            "TaskManager.cpp"
                            "TaskConfig.cpp"
                       INCLUDE_DIRS
                            "."
                       REQUIRES
                            Common
                            esp_timer
                            EspnowManager
                            EspmeshManager
                            WifiManager
                            Monitor
                            NvsManager
                       )